--- a/style/bundle.css
+++ b/style/bundle.css
@@ -65,7 +65,7 @@ caption { text-align: left; font-weight: normal; vertical-align: middle; }
 a img { border: none; }
 html, body { height: 100%; }
 html { overflow-x: hidden; }
-body, td, textarea, input { font-family: 'Open Sans', sans-serif; line-height: 1.7; font-size: 14px; color: #505050; }
+body, td, textarea, input { font-family: 'Open Sans', sans-serif; line-height: 1.7; font-size: 13px; color: #505050; }
 
 dl, dt, dd { font-weight: bold; float: left; padding-bottom: 20px; }
 dl { width: 100%; padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; border: solid 1px rgba(102,102,102,.1); border-right: none; border-left: none; }
@@ -114,7 +114,7 @@ dl { width: 100%; padding-top: 30px; padding-bottom: 10px; margin-bottom: 35px; 
 .content i,
 .content em { font-style: italic; color: #9090aa; }
 .content code { font-family: Menlo, Monaco, Consolas, 'Courier New', monospace; background: #e9edf2; padding: 1px 3px; font-size: 0.95em; }
-.content pre > code { display: block; background: transparent; font-size: 0.85em; }
+.content pre > code { display: block; background: transparent; font-size: 0.9em; }
 .content blockquote :first-child { padding-top: 0; }
 .content blockquote :last-child { padding-bottom: 0; }
 /* ----------------------------------------------------------------------------
@@ -452,11 +452,11 @@ h1, h2, h3, h4, h5 { font-family: Trebuchet MS,Liberation Sans,DejaVu Sans,sans-
 .nav-pills > li { float: left; }
 
 .language { position: absolute; z-index: 100; background-color: #DCDCDC; width: 100%; top: 0px; }
-	.language.fixed { position: fixed; overflow-y: auto; top: 0px; }
-	.language .nav { margin-bottom: 0px; }
-	.language ul li a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; color: #222; display: block; line-height: 14px; }
-	.language ul > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
-	.language ul > .active > a, .language ul > .active > a:hover { background-color: #00B2F3 !important; text-decoration: none; cursor: default; /* box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; */ color: #fff; border-radius: 0px; }
+    .language.fixed { position: fixed; overflow-y: auto; top: 0px; }
+    .language .nav { margin-bottom: 0px; }
+    .language ul li a { text-transform: uppercase; font-size: 0.85em; font-weight: 700; color: #222; display: block; line-height: 14px; }
+    .language ul > li > a:hover { background-color: inherit !important; text-decoration: underline; cursor: pointer; }
+    .language ul > .active > a, .language ul > .active > a:hover { background-color: #00B2F3 !important; text-decoration: none; cursor: default; /* box-shadow: rgba(181, 184, 247, 0.34) 0 1px 0,#15191C 0 1px 0 inset,#15191D 0 -1px 0 inset; */ color: #fff; border-radius: 0px; }
 ul.level-3 { display: none; }
 
 .code-title { word-spacing: 0.1em; margin-bottom: -15px; text-shadow: 0 1px 0 rgba(10, 10, 10, 0.23); font-weight: 300 !important; color: #808080; text-transform: uppercase; display: block; }
@@ -464,11 +464,11 @@ ul.level-3 { display: none; }
 .lang-nolang-rest, .lang-nolang { display: block !important; font-family: 'Lato' sans-serif !important; }
 
 .lang-nolang-rest, .lang-nolang { min-height: 24px; }
-	.lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: inline-block; color: #222; }
-	.lang-nolang .h1 { font-size: 1.5em; padding-bottom: 15px; }
-	.lang-nolang .h2 { font-size: 1.4em; padding-bottom: 12px; }
-	.lang-nolang .h3 { font-size: 1.3em; padding-bottom: 8px; }
-	.lang-nolang .h4 { font-size: 1.1em; padding-bottom: 5px; }
+    .lang-nolang .h1, .lang-nolang .h2, .lang-nolang .h3, .lang-nolang .h4 { display: inline-block; color: #222; }
+    .lang-nolang .h1 { font-size: 1.5em; padding-bottom: 15px; }
+    .lang-nolang .h2 { font-size: 1.4em; padding-bottom: 12px; }
+    .lang-nolang .h3 { font-size: 1.3em; padding-bottom: 8px; }
+    .lang-nolang .h4 { font-size: 1.1em; padding-bottom: 5px; }
 
 span.h1, span.h2, span.h3, span.h4 { font-weight: bold; display: block; padding-top: 18px; }
 span.h1 { font-size: 1.5em; }
@@ -477,38 +477,38 @@ span.h3 { font-size: 1.3em; }
 span.h4 { font-size: 1.1em; }
 
 .theme-switch { position: absolute; }
-	.theme-switch a:first-child { margin-right: 10px; }
+    .theme-switch a:first-child { margin-right: 10px; }
 .theme { display: inline-block; cursor: pointer; box-shadow: 1px 1px 1px #aaa; }
 .theme-black { background-color: #15191D; }
 .theme-white { background-color: #F5F5F5; }
 
 
 @media (max-width: 1180px) /* Small desktop */ {
-	.language { box-shadow: -1px 2px 6px rgba(38, 39, 43, 0.53); }
+    .language { box-shadow: -1px 2px 6px rgba(38, 39, 43, 0.53); }
 }
 
 @media (min-width: 1180px) /* Big desktop */ {
-	.language { box-shadow: 2px 1px 4px rgba(38, 39, 43, 0.53); }
+    .language { box-shadow: 2px 1px 4px rgba(38, 39, 43, 0.53); }
 }
 
 /*Logged In user*/
 .ex-right { position: absolute; right: 12px; top: 9px; }
 
 ul.top_links_user { padding: 0; width: auto; margin-top: 5px; margin-left: 0; }
-	ul.top_links_user li { position: relative; list-style: none; float: none; }
-		ul.top_links_user li a { font-size: 14px; text-transform: lowercase; display: inline-block; color: #FEFEFE; margin: 0 0 0 2px; letter-spacing: normal; padding: 0px; font-weight: normal; text-decoration: none; }
-			ul.top_links_user li a:hover { border-bottom: none; text-decoration: none; color: #FEFEFE; }
-			ul.top_links_user li a img { float: right; }
+    ul.top_links_user li { position: relative; list-style: none; float: none; }
+        ul.top_links_user li a { font-size: 14px; text-transform: lowercase; display: inline-block; color: #FEFEFE; margin: 0 0 0 2px; letter-spacing: normal; padding: 0px; font-weight: normal; text-decoration: none; }
+            ul.top_links_user li a:hover { border-bottom: none; text-decoration: none; color: #FEFEFE; }
+            ul.top_links_user li a img { float: right; }
 .top_links_user span { }
 #imgUserPhoto { width: 40px; height: 40px; border: none; }
 #lstUserMenu { display: none; }
 .top_user_drop_menu { left: auto; right: -1px; min-width: 100px; position: absolute; z-index: 10000; color: #fff; background-color: #737373; top: 47px; }
-	.top_user_drop_menu ul { margin: 0; padding: 0; }
-		.top_user_drop_menu ul li { }
-			.top_user_drop_menu ul li a { font-size: 14px; color: #fff; padding: 7px 20px; display: block; background: none; margin: 0; text-transform: lowercase; font-weight: 300; white-space: nowrap; cursor: pointer; font-weight: normal; }
-				.top_user_drop_menu ul li a:hover { background-color: #B5B5B5; color: #fff; background-image: none; cursor: pointer; text-decoration: none; }
-			.top_user_drop_menu ul li:first-child a { margin-top: 4px; }
-			.top_user_drop_menu ul li:last-child a { margin-bottom: 4px; }
+    .top_user_drop_menu ul { margin: 0; padding: 0; }
+        .top_user_drop_menu ul li { }
+            .top_user_drop_menu ul li a { font-size: 14px; color: #fff; padding: 7px 20px; display: block; background: none; margin: 0; text-transform: lowercase; font-weight: 300; white-space: nowrap; cursor: pointer; font-weight: normal; }
+                .top_user_drop_menu ul li a:hover { background-color: #B5B5B5; color: #fff; background-image: none; cursor: pointer; text-decoration: none; }
+            .top_user_drop_menu ul li:first-child a { margin-top: 4px; }
+            .top_user_drop_menu ul li:last-child a { margin-bottom: 4px; }
 .top_nav { position: absolute; top: 0; left: 152px; }
 .top_nav_user_name_first { font-size: 19px; width: 50%; float: right; text-align: right; margin: 3px 5px 1px 0px; min-width: 50px; }
 .top_nav_user_name_last { font-size: 14px; width: 50%; float: right; text-align: right; margin-right: 5px; line-height: 18px; }
@@ -517,7 +517,7 @@ ul.top_links_user { padding: 0; width: auto; margin-top: 5px; margin-left: 0; }
 .adminACL { display: none !important; }
 .top_user_drop_menu.appList { left: 13px; }
 .app-list ul { max-height: 200px; list-style: none; }
-	.app-list ul li a { padding: 7px 20px 7px 16px; }
+    .app-list ul li a { padding: 7px 20px 7px 16px; }
 .nav-separator { padding: 0px; margin: 0px; border-top: solid 1px #B5B5B5; display: block; }
 .top_user_drop_menu.appList .nav-separator:first-child, .top_user_drop_menu.appList .nav-separator:last-child { border: solid 1px #737373; }
 
@@ -526,26 +526,28 @@ ul.top_links_user { padding: 0; width: auto; margin-top: 5px; margin-left: 0; }
 /********Table Css for markdown ************/
 table { -moz-box-shadow: 0 0 14px rgba(0, 0, 0, 0.15); border-collapse: collapse; border-spacing: 0; display: table; }
 
-	table th strong,
-	table td { padding: 4px 6px; line-height: 22px; vertical-align: top; border-top: 1px solid #dddddd; font-size: 0.9em; }
-	table th strong { line-height: 24px; border-top: none; }
-	table th { font-weight: bold; background-color: #CFCECE; }
-	table thead th { vertical-align: bottom; }
-	table tbody + tbody { border-top: 2px solid #dddddd; }
+    table th strong,
+    table td { padding: 4px 6px; line-height: 22px; vertical-align: top; border-top: 1px solid #dddddd; font-size: 0.9em; }
+    table th strong { line-height: 24px; border-top: none; }
+    table th { font-weight: bold; background-color: #CFCECE; }
+    table thead th { vertical-align: bottom; }
+    table tbody + tbody { border-top: 2px solid #dddddd; }
 table { width: 100%; border: 1px solid #dddddd; border-collapse: separate; *border-collapse: collapse; border-left: 0; padding: 0px !important; margin: 10px 0; }
-	table th,
-	table td { border-left: 1px solid #dddddd; }
-	table caption + thead tr:first-child th,
-	table caption + thead tr:first-child td,
-	table caption + tbody tr:first-child th,
-	table caption + tbody tr:first-child td,
-	table colgroup + thead tr:first-child th,
-	table colgroup + tbody tr:first-child th,
-	table colgroup + tbody tr:first-child td,
-	table colgroup + thead tr:first-child td,
-	table thead:first-child tr:first-child td,
-	table thead:first-child tr:first-child th,
-	table tbody tr:first-child th,
-	table tbody tr:first-child td { border-top: 0; }
+    table th,
+    table td { border-left: 1px solid #dddddd; }
+    table caption + thead tr:first-child th,
+    table caption + thead tr:first-child td,
+    table caption + tbody tr:first-child th,
+    table caption + tbody tr:first-child td,
+    table colgroup + thead tr:first-child th,
+    table colgroup + tbody tr:first-child th,
+    table colgroup + tbody tr:first-child td,
+    table colgroup + thead tr:first-child td,
+    table thead:first-child tr:first-child td,
+    table thead:first-child tr:first-child th,
+    table tbody tr:first-child th,
+    table tbody tr:first-child td { border-top: 0; }
 /*-------------table css ends----------------*/
+
+dl dd, dl dt { padding-bottom: 5px; }
 
